<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.afgl.manjaresadiario.ui.about.AboutFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagen_sagrario"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/padding_title_recipe"
            android:contentDescription="@string/sagrario_content_description"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textAlignment="center"
            android:text="@string/manjares"
            android:textSize="@dimen/text_size_title"
            android:padding="@dimen/padding_text"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_text"
            android:text="@string/about_fragment_content"
            android:textSize="@dimen/text_size_description" />

        <TextView
            android:id="@+id/about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_title_recipe"
            android:text="@string/about_me"
            android:textSize="@dimen/aboutme_text_size"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_title_recipe"
            android:text="@string/about_copy"
            android:textAlignment="center"
            android:textSize="@dimen/copyright_text_size"
            android:textStyle="bold|italic"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/button_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_button_web"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/colorAccent"
                android:layout_marginRight="@dimen/padding_title_recipe"
                android:layout_marginEnd="@dimen/padding_title_recipe"
                style="?android:attr/buttonBarStyle" />

            <Button
                android:id="@+id/button_licenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_button_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/colorAccent"
                style="?android:attr/buttonBarStyle" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
