<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.afgl.manjaresadiario.ui.detail.VideoFragment"
    tools:showIn="@layout/activity_video">

    <FrameLayout
        android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
        android:id="@+id/youtube_player_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/content_text_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_home"
                android:src="@drawable/ic_home_black_24dp"
                android:layout_marginRight="@dimen/padding_title_recipe"
                android:layout_marginEnd="@dimen/padding_title_recipe"/>

            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/butoon_share"
                android:src="@drawable/ic_share_black_24dp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_title"
                    android:padding="@dimen/padding_text"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_preparacion"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_description"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/text_size_description"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
